--- a/trackpad/trackpad.html
+++ b/trackpad/trackpad.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pformer</title>
-	<link rel="stylesheet" href="arrows.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="trackpad.css" type="text/css" media="all" />
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 			<div id="down" class="arrow-key">down</div>
 		</div>
 	</div>
-	<script src="arrow-keys.js" charset="utf-8"></script>
+	<script src="trackpad.js" charset="utf-8"></script>
 	<!-- <script src="main.js" type="module" charset="utf-8"></script> -->
 </body>
 
