--- a/trackpad/trackpad.html
+++ b/trackpad/trackpad.html
@@ -11,10 +11,14 @@
 <body>
 	<div class="app">
 		<div id='header'>
+			<div></div>
+			<div></div>
+			<div></div>
 		</div>
 		<div class="stage">
 			<div id='block'></div>
 		</div>
+		<div class="trackpad"> </div>
 		<!-- <input class="test-input" type="text" name="" id="" value="" /> -->
 		<div class="keyboard">
 			<div id="left" class="arrow-key">left</div>
@@ -23,6 +27,7 @@
 			<div id="down" class="arrow-key">down</div>
 		</div>
 	</div>
+	<script src="dom-map.js" charset="utf-8"></script>
 	<script src="trackpad.js" charset="utf-8"></script>
 	<!-- <script src="main.js" type="module" charset="utf-8"></script> -->
 </body>
