added modules dir, finished stage limots

--- a/trackpad/trackpad.html
+++ b/trackpad/trackpad.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
+	<meta >
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pformer</title>
 	<link rel="stylesheet" href="trackpad.css" type="text/css" media="all" />
@@ -27,9 +27,9 @@
 			<div id="down" class="arrow-key">down</div>
 		</div>
 	</div>
-	<script src="dom-map.js" charset="utf-8"></script>
-	<script src="trackpad.js" charset="utf-8"></script>
-	<!-- <script src="main.js" type="module" charset="utf-8"></script> -->
+	<script src="dom-map.js" type="module"></script>
+	<script src="trackpad.js" type="module"></script>
+	<!-- <script src="main.js" type="module" ></script> -->
 </body>
 
 </html>
